[gd_scene load_steps=17 format=2]

[ext_resource path="res://scenes/entity/Colonist.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/entity/Soldier.gd" type="Script" id=2]
[ext_resource path="res://assets/units/colonist_soldier.png" type="Texture" id=3]
[ext_resource path="res://assets/effects/muzzle_flash.png" type="Texture" id=4]
[ext_resource path="res://assets/temp/texture_bot.png" type="Texture" id=5]
[ext_resource path="res://assets/temp/texture_top.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "alive",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "panic",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "shoot",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=1]
resource_local_to_scene = true
radius = 13.0

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Soldier" groups=["soldier"] instance=ExtResource( 1 )]
script = ExtResource( 2 )
guard_rotation_speed = 0.005

[node name="AnimatedSprite" parent="." index="0"]
frames = SubResource( 5 )
flip_h = true

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 1 )

[node name="TextureProgress" parent="." index="2"]
margin_left = -25.0
margin_top = -24.0
margin_right = 75.0
margin_bottom = -8.0
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 1
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )

[node name="GuardTimer" type="Timer" parent="." index="5"]
wait_time = 22.0
one_shot = true

[node name="ShootTimer" type="Timer" parent="." index="6"]
wait_time = 3.0
one_shot = true

[node name="RestTimer" type="Timer" parent="." index="7"]
wait_time = 0.5
one_shot = true

[node name="MuzzleFlash" type="AnimatedSprite" parent="." index="8"]
visible = false
position = Vector2( -13, -1 )
frames = SubResource( 10 )
speed_scale = 2.0
flip_h = true

[node name="PatrolTimer" type="Timer" parent="." index="10"]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="GuardTimer" to="." method="_on_GuardTimer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="RestTimer" to="." method="_on_RestTimer_timeout"]
[connection signal="animation_finished" from="MuzzleFlash" to="." method="_on_MuzzleFlash_animation_finished"]
[connection signal="timeout" from="PatrolTimer" to="." method="_on_PatrolTimer_timeout"]
